# Autonomous-shopping-Cart-ROS

./: README.md
coordinator/: README.md
coordinator/_Notes/: README
coordinator/_Old_packages/: arm_test.launch  coordinator.launch  fetch.rviz
coordinator/bringup_coordinator/: CMakeLists.txt  README.md  package.xml
coordinator/coordinator/: CMakeLists.txt  README.md  package.xml
coordinator/coordinator/src/: arm_test.cpp  coordinator.cpp  grab_all.cpp  grab_gearbox.cpp  grab_object_interactive.cpp  grab_tote.cpp  grab_tote_v2.cpp  visit_all.cpp
manipulation/: README  arm_motion_notes  cartesian_motion_notes  kit_drop_notes  table_height_transform_notes
manipulation/_Old_packages/test_torso_head/: CMakeLists.txt  README.md  package.xml.disabled
manipulation/arm_motion_action/action/: arm_interface.action
manipulation/arm_motion_interface/src/: arm_motion_interface.cpp  arm_motion_interface_switcher.cpp
manipulation/cartesian_motion_commander/: CMakeLists.txt  README.md
manipulation/cartesian_motion_commander/src/: cart_motion_commander.cpp  example_fetch_grab_part.cpp  example_generic_cart_move_ac3.cpp  fetch_cartesian_interactive_ac.cpp
manipulation/fetch_arm_behavior_server/: CMakeLists.txt  README.md  package.xml
manipulation/fetch_arm_behavior_server/launch/: fetch_static_transforms.launch
manipulation/fetch_arm_behavior_server/src/: example_fetch_cart_path_planner_main.cpp  example_fetch_grab_part_ac.cpp  fetch_cart_move_as.cpp  fetch_planner.h  planner_joint_weights.h  robot_specific_fk_ik_mappings.h  robot_specific_names.h
manipulation/gripper_interface/: CMakeLists.txt  README.md  package.xml
manipulation/gripper_interface/src/: gripper_interface.cpp  gripper_test.cpp
manipulation/kinematics/: manipulation_notes  robot_description.txt
manipulation/kinematics/fetch_fk_ik/: CMakeLists.txt  README.md  dev_notes  kinematics_notes  package.xml
manipulation/kinematics/fk_ik_virtual/: README.md
manipulation/manipulation_launch/: CMakeLists.txt  README.md  manipulation.launch  package.xml  pre_pose.launch
manipulation/move_part_lib/: CMakeLists.txt  README.md  package.xml
manipulation/move_part_lib/src/: example_move_part_main.cpp  move_part.cpp
manipulation/sticky_fingers/: package.xml
manipulation/test_fetch_arm_ac/: CMakeLists.txt  README.md  package.xml
manipulation/test_fetch_arm_ac/src/: fetch_arm_pre_pose.cpp  fetch_arm_pre_pose_interactive.cpp  fetch_arm_safe_start.cpp  fetch_arm_test_action_client.cpp  fetch_arm_test_action_client2.cpp  fetch_arm_test_interactive.cpp  fetch_head_test_action_client.cpp  fetch_torso_test_action_client.cpp
navigation/: README
navigation/_Notes/: wheel_speed_max
navigation/bringup_navigation/: CMakeLists.txt  README.md  bringup_navigation.launch  package.xml
navigation/mapper/: CMakeLists.txt  README.md  package.xml
navigation/mapper/gazebo_map/: fetch_arena_gazebo.yaml
navigation/mapper/launch/: slam_n_generate_map.launch
navigation/mapper/real_map/: map_main.pgm  map_main.yaml
navigation/mobot_pub_des_state/: CMakeLists.txt
navigation/traj_builder/: README.md
perception/: README  head_camera_notes
perception/fetch_depth_camera/: CMakeLists.txt  README.md  package.xml
perception/fetch_vision/: CMakeLists.txt  README.md  package.xml
perception/object_finder/: CMakeLists.txt  README.md  package.xml  tote_notes
perception/object_finder/action/: objectFinder.action
perception/object_finder/include/object_finder_as/: object_finder.h
perception/object_finder/src/: bolt_finder_fncs.cpp  example_object_finder_action_client.cpp  example_tote_finder_action_client.cpp  gear_finder_fncs.cpp  gearbox_finder_fncs.cpp  object_finder_as.cpp  object_finder_as_lib.cpp  object_finder_helper_fncs.cpp  object_finder_main.cpp  tote_finder_fncs.cpp  wsn_gear_finder_fncs.cpp  wsn_gearbox_finder_fncs.cpp  wsn_tote_finder_fncs.cpp
perception/object_finder_launch/: CMakeLists.txt  README.md  object_finder.launch  package.xml
perception/object_finder_lib/: CMakeLists.txt  README.md  package.xml
perception/pcd_images/: CMakeLists.txt  README.md
perception/pcl_utils/: CMakeLists.txt  README.md
(+67 files in other folders)
